--- a/style.css
+++ b/style.css
@@ -7,11 +7,13 @@
 @media (max-width:805px) {
     
     .aviso{
+        margin-top: 70px;
         display: flex;
         flex:1;
         justify-content: center;
         align-items: center;
         flex-direction: column;
+        margin-bottom: 70px;
     }
     .principal{
         display: none;
