--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ h1 {
     margin-bottom: 20px;
 }
 
-#tela {
+.tela {
     border: 2px solid #000;
     background-color: #FFF;
     cursor: crosshair;
